kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-api
  labels:
    app: main-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-api
  template:
    metadata:
      name: main-api
      labels:
        app: main-api
    spec:
      containers:
        - name: api
          image: ghcr.io/zgamelogic/main-api:master
          imagePullPolicy: Always
          volumeMounts:
            - name: keystore-volume
              mountPath: "/etc/keystore"
              readOnly: true
            - name: frontend-files-volume
              mountPath: "/front-end"
              readOnly: true
            - name: downloads-volume
              mountPath: "/downloads"
              readOnly: true
      volumes:
        - name: keystore-volume
          secret:
            secretName: ssl-keystore-secret
        - name: frontend-files-volume
          hostPath:
            path: /home/Ben/front-end
            type: Directory
        - name: downloads-volume
          hostPath:
            path: /home/Ben/downloads
            type: Directory
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
      nodeSelector:
        kubernetes.io/hostname: master
