kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-api
spec:
  selector:
    app: main-api
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30015
  type: NodePort
